Update do todo funcionando no componente

--- a/src/app/components/todo-create/todo-create.component.html
+++ b/src/app/components/todo-create/todo-create.component.html
@@ -22,7 +22,7 @@
       Concluído?</mat-slide-toggle>
 
     <div class="buttons-cont">
-      <button class="button mat-elevation-z8" (click)="create()" mat-raised-button color="primary">
+      <button class="button mat-elevation-z8" (click)="save()" mat-raised-button color="primary">
         Salvar
       </button>
       <button class="button mat-elevation-z8" (click)="cancel()" mat-stroked-button color="warn">
