--- a/src/app/components/todo-create/todo-create.component.scss
+++ b/src/app/components/todo-create/todo-create.component.scss
@@ -29,11 +29,15 @@
   margin-top:40px;
 }
 
+.mb-5 {
+  margin-bottom: 5px;
+}
+
 .mb-20{
   margin-bottom: 20px;
 }
 
- .full-width {
+.full-width {
   width: 100%;
   flex: 1;
 }
