change app name

--- a/src/app/components/template/main/main.component.html
+++ b/src/app/components/template/main/main.component.html
@@ -2,7 +2,7 @@
   <button mat-button>
     <mat-icon>menu</mat-icon>
   </button>
-  <span [routerLink]="['/']">Task House</span>
+  <span [routerLink]="['/']">Todo</span>
 </mat-toolbar>
 <ng-content></ng-content>
 <mat-toolbar color="primary" class="footer">
