--- a/src/app/components/todo-list/todo-list.component.scss
+++ b/src/app/components/todo-list/todo-list.component.scss
@@ -1,3 +1,4 @@
+$color: #3f51b5;
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -20,7 +21,7 @@
         font-size: 15pt;
         padding-left: 10px;
         padding-right: 5px;
-        border-left: 4px solid rgb(102, 51, 153);
+        border-left: 4px solid $color;
         justify-content: right;
         align-items: center;
 
@@ -40,7 +41,7 @@
 }
 ::ng-deep .mat-expansion-panel-body {
   font-size: 13pt;
-  border-left: 4px solid rgb(102, 51, 153);
+  border-left: 4px solid $color;
   display: flex;
   justify-content: space-around;
   align-items: center;
